source/_styles/main.styl
body
    color #252525
    font-family 'Noto Sans', sans-serif

a
    color #0680FC

.content
    margin-top 72px
    background-color #FFFFFF

.btn-primary
    padding 0 21px
    line-height 40px
    font-weight bold
    border none
    border-radius 20px
    color #FFFFFF
    background linear-gradient(180deg, #0EB7FE 0%, #0680FC 100%)
    box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.1)
    white-space normal

    &:hover
        box-shadow 0 2px 10px 0 rgba(6, 128, 252, 0.6)

    &:active
        box-shadow inset 0 0 8px 0 rgba(0, 0, 0, 0.13)

@media only screen and (max-width: 576px)
    .content
        margin-top 47px

